--- a/slotGame/index.html
+++ b/slotGame/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <title>Slot game | Snowfly</title>
     <script type="text/javascript" src="js/phaser.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="./js/jquery.js"></script>
     <script src="./js/SnowflyGameApi.js"></script> 
     <script type="text/javascript" src="./js/main.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
